[project]
name = "dashscope-sdk-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.12.0",
    "fastapi>=0.128.0",
    "gunicorn>=23.0.0",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "pytest-xdist>=3.8.0",
    "uvicorn[standard]>=0.40.0",
]
